--- a/css/demo.css
+++ b/css/demo.css
@@ -1,383 +1,148 @@
 @font-face {
-	font-family: 'codropsicons';
 	font-weight: normal;
 	font-style: normal;
-	src: url('../fonts/codropsicons/codropsicons.eot');
-	src: url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'), url('../fonts/codropsicons/codropsicons.woff') format('woff'), url('../fonts/codropsicons/codropsicons.ttf') format('truetype'), url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
+	font-family: 'codropsicons';
+	src:url('../fonts/codropsicons/codropsicons.eot');
+	src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/codropsicons/codropsicons.woff') format('woff'),
+		url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
+		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
 }
 
-*,
-*:after,
-*:before {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-.clearfix:before,
-.clearfix:after {
-	content: '';
-	display: table;
-}
-
-.clearfix:after {
-	clear: both;
-}
+*, *:after, *:before { border-box; box-sizing: border-box; }
+.clearfix:before, .clearfix:after { content: ''; display: table; }
+.clearfix:after { clear: both; }
 
 body {
-	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
-	color: #444;
-	background: #fff;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	background: #333;
+	color: #fff;
+	font-weight: 200;
+	font-size: 1em;
+	font-family: 'Raleway', 'Arial', sans-serif;
 }
 
 a {
+	color: #fff;
 	text-decoration: none;
-	color: #4e3c3e;
 	outline: none;
+	font-weight: 600;
 }
 
-a:hover,
-a:focus {
-	color: #f48b95;
+a:hover, a:focus {
+	color: #debcc3;
 }
 
-.hidden {
-	position: absolute;
-	overflow: hidden;
-	width: 0;
-	height: 0;
-	pointer-events: none;
-}
-
-.info {
-	font-size: 0.85em;
-	font-weight: bold;
-	line-height: 36px;
-	margin: 5em 0 0;
-	color: #9c9898;
-}
-
-.link-copy {
-	position: absolute;
-	top: 2em;
-	right: 2em;
-	width: 20px;
-	height: 20px;
-	cursor: pointer;
-	background: url(../img/link.svg) no-repeat center center;
-	background-size: cover;
-}
-
-.link-copy::after {
-	content: 'Click to copy direct link';
-	font-size: 0.85em;
-	font-weight: bold;
-	position: absolute;
-	right: 100%;
-	margin: 0 1em 0 0;
-	white-space: nowrap;
-	pointer-events: none;
-	opacity: 0;
-	color: #ddd;
-	-webkit-transform: translate3d(10px, 0, 0);
-	transform: translate3d(10px, 0, 0);
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-	transition: transform 0.3s, opacity 0.3s;
-}
-
-.link-copy:hover::after {
-	opacity: 1;
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-}
-
-.link-copy::before {
-	content: '';
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 50px;
-	height: 50px;
-	margin: -25px 0 0 -25px;
-	opacity: 0;
-	border-radius: 50%;
-	background: #d94f5c;
-}
-
-.link-copy--animate::before {
-	-webkit-animation: pulse 0.3s;
-	animation: pulse 0.3s;
-}
-
-@-webkit-keyframes pulse {
-	from {
-		opacity: 1;
-		-webkit-transform: scale3d(0, 0, 1);
-		transform: scale3d(0, 0, 1);
-	}
-
-	to {
-		opacity: 0;
-		-webkit-transform: scale3d(1, 1, 1);
-		transform: scale3d(1, 1, 1);
-	}
-
-}
-
-@keyframes pulse {
-	from {
-		opacity: 1;
-		-webkit-transform: scale3d(0, 0, 1);
-		transform: scale3d(0, 0, 1);
-	}
-
-	to {
-		opacity: 0;
-		transform: scale3d(1, 1, 1);
-		webkit-transform: scale3d(1, 1, 1);
-	}
-
-}
-
-.github-corner:hover .octo-arm {
-	animation: octocat-wave 560ms ease-in-out;
-}
-
-@keyframes octocat-wave {
-	0%,
-	100% {
-		transform: rotate(0);
-	}
-
-	20%,
-	60% {
-		transform: rotate(-25deg);
-	}
-
-	40%,
-	80% {
-		transform: rotate(10deg);
-	}
-
-}
-
-@media (max-width:500px) {
-	.github-corner:hover .octo-arm {
-		animation: none;
-	}
-
-	.github-corner .octo-arm {
-		animation: octocat-wave 560ms ease-in-out;
-	}
-
-}
-
-/* Content */
-.content {
-	padding: 3em 0;
-}
-
-.section {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-align-items: center;
-	align-items: center;
-}
-
-.section:nth-of-type(odd):not(:first-child) {
-	color: #fff;
-	background: #2a282b;
-}
-
-.section--menu {
-	position: relative;
-	overflow: hidden;
-	min-height: 80vh;
-	padding: 2em 0 8em;
-}
-
-.break {
-	padding: 3em 0;
-	text-align: center;
-	background: #d94f5c;
-}
-
-.section__title {
-	font-size: 0.65em;
-	font-weight: 700;
-	-webkit-flex: none;
-	flex: none;
-	margin: 3em 0 15em;
-	text-indent: 3px;
-	letter-spacing: 3px;
-	text-transform: uppercase;
-	color: #d1d1d1;
-}
-
-.break__title {
-	font-size: 1.85em;
-	font-weight: normal;
-	margin: 0;
-	color: #fff;
-}
-
-.section--intro {
-	font-size: 2em;
-	position: relative;
-	min-height: 100vh;
-	text-align: center;
-	color: #fff;
-}
-
-.section--intro p {
-	max-width: 1000px;
-	margin: 0 auto;
+section {
 	padding: 1em;
+	text-align: center;
 }
 
 /* Header */
 .codrops-header {
-	position: relative;
-	height: 100vh;
-	min-height: 600px;
-	padding: 0em 1em 4em;
+	z-index: 1000;
+	position: absolute;
+	top: 50%;
+	left: 50%;
 	text-align: center;
-	color: #fff;
-	background: #d94f5c url(../img/mouse.svg) no-repeat left 50% bottom 40px;
+	max-width: 500px;
+	-webkit-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 .codrops-header h1 {
-	font-size: 3.25em;
-	font-weight: 700;
+	margin: 0;
+	font-weight: 200;
+	font-size: 3em;
 	line-height: 1;
-	position: relative;
-	z-index: 10;
-	margin: 0.5em 0 0;
-	letter-spacing: -1px;
 }
 
 .codrops-header h1 span {
-	font-size: 50%;
-	font-weight: normal;
 	display: block;
-	margin: 0.5em 0;
-	letter-spacing: 0;
-	color: #f48b95;
+	padding: 0.5em 0 0.6em 0.1em;
+	font-size: 40%;
+	line-height: 1.2;
+	opacity: 0.7;
 }
 
-/* Top Navigation Style */
-.codrops-links {
+/* To Navigation Style */
+.codrops-top {
+	width: 100%;
+	text-transform: uppercase;
+	font-weight: 400;
+	font-size: 0.69em;
+	line-height: 2.2;
 	position: relative;
-	display: inline-block;
-	text-align: center;
-	white-space: nowrap;
+	z-index: 2000;
 }
 
-.codrops-links::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 1px;
-	height: 100%;
-	background: #c14954;
-	-webkit-transform: rotate3d(0, 0, 1, 22.5deg);
-	transform: rotate3d(0, 0, 1, 22.5deg);
-}
-
-.codrops-icon {
+.codrops-top a {
 	display: inline-block;
-	width: 1.5em;
-	margin: 0.5em;
-	padding: 0em 0;
+	padding: 0.3em 0.7em;
 	text-decoration: none;
+	letter-spacing: 1px;
+	margin: 5px;
 }
 
-.codrops-icon span {
-	display: none;
+.codrops-top span.right {
+	float: right;
+}
+
+.codrops-top span.right a {
+	display: block;
+	float: left;
 }
 
 .codrops-icon:before {
-	font-family: 'codropsicons';
+	margin: 0 4px;
+	text-transform: none;
 	font-weight: normal;
 	font-style: normal;
 	font-variant: normal;
+	font-family: 'codropsicons';
 	line-height: 1;
-	margin: 0 5px;
-	text-transform: none;
-	-webkit-font-smoothing: antialiased;
 	speak: none;
+	-webkit-font-smoothing: antialiased;
 }
 
-.codrops-icon--drop:before {
-	content: '\e001';
+.codrops-icon-drop:before {
+	content: "\e001";
 }
 
-.codrops-icon--prev:before {
-	content: '\e004';
+.codrops-icon-prev:before {
+	content: "\e004";
 }
 
-/* Demo links */
+/* Demo Buttons Style */
 .codrops-demos {
-	margin: 2em 0 0;
+	padding-top: 2em;
+	font-size: 0.8em;
 }
 
 .codrops-demos a {
 	display: inline-block;
-	margin: 0 0.5em;
+	margin: 0.5em;
+	padding: 0.7em 1.1em;
+	outline: none;
+	border: 2px solid #fff;
+	text-decoration: none;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	width: 165px;
 }
 
-.codrops-demos a.current-demo {
-	color: #333;
+.codrops-demos a:hover,
+.codrops-demos a.current-demo,
+.codrops-demos a.current-demo:hover {
+	color: #debcc3;
+	border-color: #debcc3;
 }
 
-/* Related demos */
-.content--related {
-	font-weight: bold;
-	padding: 10em 1em;
-	text-align: center;
-	background: #d94f5c;
-}
+@media screen and (max-width: 25em) {
 
-.content__wrap--related {
-	max-width: 800px;
-	margin: 0 auto;
-}
-
-.media-item {
-	display: inline-block;
-	padding: 1em;
-	vertical-align: top;
-	-webkit-transition: color 0.3s;
-	transition: color 0.3s;
-}
-
-.media-item__img {
-	max-width: 100%;
-	opacity: 0.6;
-	-webkit-transition: opacity 0.3s;
-	transition: opacity 0.3s;
-}
-
-.media-item:hover .media-item__img,
-.media-item:focus .media-item__img {
-	opacity: 1;
-}
-
-.media-item__title {
-	font-size: 1em;
-	margin: 0;
-	padding: 0.5em;
-}
-
-@media screen and (max-width:50em) {
-	.section--intro {
-		font-size: 1em;
+	.codrops-icon span {
+		display: none;
 	}
 
 }
