--- a/css/app.css
+++ b/css/app.css
@@ -12,10 +12,10 @@
 	height:600px;
 }
 
-/*.slider{
+.slider{
 	width: 100%;
-	height: 700px;
-}*/
+	height: 600px;
+}
 /*NAVIGATION BAR*/
 
 .menu-navigation-icons {
@@ -144,8 +144,9 @@ div#slider h3{
 
 	position: absolute;
 	z-index: 20;
-	color: white;
-	text-transform: uppercase;
+/*	color: white;*/
+   
+	/*text-transform: uppercase;*/
 	/*font-size: 3em;*/
 	top: 50px;
 	left: 50%;
@@ -153,10 +154,15 @@ div#slider h3{
 }
 /***** Features *****/
 
+.two{
+width: 100%;
+height: 660px;
 
+}
 .features{
 width: 100%;
-height: 700px;
+/*height: 720px;*/
+top: 90%;
 /*background-image:url(../img/pattern_bg.png);*/
 
 /*z-index: 10;*/
@@ -168,13 +174,17 @@ position: absolute;
     padding-bottom: 130px;
    /* background-image:url(../img/pattern_bg.png) fixed;*/
     width: 100%;
-    height: 700px;
-    /*height: auto;*/
+    height: 680px;
+    /*
+    height: auto;*/
 }
-.template_header {
-	color: whitesmoke;
-	text-transform: uppercase;
-	font-family: 'Bubblegum Sans', cursive;
+.template_header h1 {
+	
+    font-family: 'Bubblegum Sans', cursive; 
+    font-size: 3em;
+    color: yellow;
+	
+	
 }
 #templatemo_features p {
     padding-bottom: 30px;
@@ -232,5 +242,142 @@ position: absolute;
 .three {
 	width: 100%;
 	/*height: auto;*/
-	height: 300px;
+	/*height: 600px;*/
+    background-color: grey;
 }
+/*image on scroll effects starts here*/
+.cbp-so-scroller {
+    margin-top: 3em;
+    overflow: hidden;
+}
+
+.cbp-so-section {
+    margin-bottom: 15em;
+}
+/* Clear floats of children */
+.cbp-so-section:before,
+.cbp-so-section:after {
+    content: " ";
+    display: table;
+}
+
+.cbp-so-section:after {
+    clear: both;
+}
+
+/* Text styling */
+.cbp-so-section h2 {
+    font-size: 5em;
+    font-weight: 300;
+    line-height: 1;
+    font-family: 'Bubblegum Sans', cursive;
+    color: #f26262;
+}
+
+.cbp-so-section p {
+    font-size: 1.6em;
+    font-weight: 300;
+    font-family: 'Bubblegum Sans', cursive;
+}
+/* Sides */
+.cbp-so-side {
+    width: 50%;
+    float: left;
+    margin: 0;
+    padding: 3em 4%;
+    overflow: hidden;
+    min-height: 12em;
+    -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+    -moz-transition: -moz-transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+/* Clear floats of children */
+.cbp-so-side:before,
+.cbp-so-side:after {
+    content: " ";
+    display: table;
+}
+
+.cbp-so-side:after {
+    clear: both;
+}
+
+.cbp-so-side-right {
+    text-align: left;
+}
+
+.cbp-so-side-left {
+    text-align: right;
+}
+
+.cbp-so-side-right img {
+    float: left;
+}
+
+.cbp-so-side-left img {
+    float: right;
+}
+
+/* Initial state (hidden or anything else) */
+.cbp-so-init .cbp-so-side {
+    opacity: 0;
+}
+
+.cbp-so-init .cbp-so-side-left {
+    -webkit-transform: translateX(-80px);
+    -moz-transform: translateX(-80px);
+    transform: translateX(-80px);
+}
+
+.cbp-so-init .cbp-so-side-right {
+    -webkit-transform: translateX(80px);
+    -moz-transform: translateX(80px);
+    transform: translateX(80px);
+}
+
+/* Animated state */
+/* add you final states (transition) or your effects (animations) for each side */
+.cbp-so-section.cbp-so-animate .cbp-so-side-left,
+.cbp-so-section.cbp-so-animate .cbp-so-side-right {
+    -webkit-transform: translateX(0px);
+    -moz-transform: translateX(0px);
+    transform: translateX(0px);
+    opacity: 1;
+}
+
+/* For example, add a delay for the right side:
+.cbp-so-section.cbp-so-animate .cbp-so-side-right {
+    -webkit-transition-delay: 0.2s;
+    -moz-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+}
+*/
+
+/* Example media queries */
+
+@media screen and (max-width: 73.5em) {
+    .cbp-so-scroller {
+        font-size: 65%;
+    }
+
+    .cbp-so-section h2 {
+        margin: 0;
+    }
+
+    .cbp-so-side img {
+        max-width: 120%;
+    }
+}
+
+@media screen and (max-width: 41.125em) {
+    .cbp-so-side {
+        float: none;
+        width: 100%;
+    }
+
+    .cbp-so-side img {
+        max-width: 100%;
+    }
+}
+
