--- a/css/app.css
+++ b/css/app.css
@@ -388,6 +388,7 @@ position: absolute;
 
 /*ROW FOUR WITH BACKGROUND IMAGE*/
 .four {
+
     width: 100%;
     height: 500px;
 background-image: url(../img/mushuho.jpg);
@@ -398,12 +399,25 @@ background-image: url(../img/mushuho.jpg);
 .bg-img {
     width: 100%;
     height: auto;
-    text-align: center;s
+    text-align: center;
+
 }
 /*image overlay in row four*/
+.overlay{
+     position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
+    height: 100%;
+    z-index: 1; /* Sit on top */
+    background-color: rgb(0,0,0); /* Black fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity */
+    overflow-x: hidden;
+}
 h4 {
+    padding-top: 6%;
      font-size: 4em;
-    /*font-weight: 300;*/
+
     line-height: 1;
     font-family: 'Bubblegum Sans', cursive;
     color: snow;
